<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textViewCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/categoria" />
    
    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textViewCategoria"
        android:layout_below="@id/textViewCategoria"
        android:layout_marginTop="5.0dip" />

    <TextView
        android:id="@+id/textViewDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textViewCategoria"
        android:layout_below="@id/spinnerCategoria"
        android:layout_marginTop="10.0dip"
        android:text="@string/descricao" />

    <EditText
        android:id="@+id/editTextDescricao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textViewDescricao"
        android:layout_alignRight="@id/spinnerCategoria"
        android:layout_below="@id/textViewDescricao"
        android:layout_marginTop="5.0dip"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editTextDescricao"
        android:layout_below="@id/editTextDescricao"
        android:layout_marginTop="10.0dip"
        android:text="@string/valor" />

    <EditText
        android:id="@+id/editTextValor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textViewValor"
        android:layout_alignRight="@id/editTextDescricao"
        android:layout_below="@id/textViewValor"
        android:layout_marginTop="5.0dip"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonSalvarDespesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/editTextValor"
        android:onClick="salvarDespesa"
        android:text="@string/salvar" />
    
    <Button
        android:id="@+id/buttonVerDespesas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/buttonSalvarDespesa"
        android:layout_alignBottom="@id/buttonSalvarDespesa"
        android:layout_toLeftOf="@id/buttonSalvarDespesa"
        android:onClick="visualizarDespesas"
        android:text="@string/visualizar" />

</RelativeLayout>